--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 <body class="bg-black m-0 p-0 overflow-hidden">
   <h1 id="video-title" class="hidden"></h1>
-  <div id="video-container" class="relative w-full h-screen">
+  <div id="video-container" class="relative w-full h-screen flex items-center justify-center">
     <video
       id="video-player"
       class="w-full h-full object-contain"
