--- a/index.html
+++ b/index.html
@@ -39,11 +39,14 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      position: relative;
     }
-    /* Pastikan elemen video mengisi kontainernya */
     #video-player {
       width: 100%;
       height: 100%;
+      display: block;
+      /* Pastikan poster image mengisi area video */
+      object-fit: contain; /* atau cover, tergantung preferensi Anda */
     }
   </style>
 </head>
@@ -54,13 +57,24 @@
 
   <script>
     document.addEventListener('DOMContentLoaded', async () => {
-      const videoId = window.location.pathname.substring(1); // Mendapatkan ID dari URL (contoh: mydomain.com/vYPd9nneGP -> vYPd9nneGP)
+      let urlPath = window.location.pathname;
+      let videoId = '';
+
+      if (urlPath.startsWith('/')) {
+        urlPath = urlPath.substring(1);
+      }
+
+      if (urlPath.startsWith('e/')) {
+        videoId = urlPath.substring(2);
+      } else {
+        videoId = urlPath;
+      }
+
       const videoPlayer = document.getElementById('video-player');
 
       if (!videoId) {
         console.error('ID video tidak ditemukan di URL.');
-        // Tampilkan pesan error atau redirect jika ID tidak ada
-        videoPlayer.src = ''; // Kosongkan src untuk mencegah error player
+        videoPlayer.src = '';
         return;
       }
 
@@ -73,7 +87,15 @@
         if (foundVideo) {
           videoPlayer.src = foundVideo.Url;
           
-          // Inisialisasi Fluid Player setelah setting src
+          // Set poster image jika tersedia di JSON
+          if (foundVideo.PosterUrl) {
+            videoPlayer.setAttribute('poster', foundVideo.PosterUrl);
+          } else {
+            // Opsional: Gunakan gambar placeholder jika PosterUrl tidak ada
+            // videoPlayer.setAttribute('poster', 'URL_GAMBAR_PLACEHOLDER_ANDA.jpg');
+          }
+
+          // Inisialisasi Fluid Player setelah setting src dan poster
           fluidPlayer(
             'video-player',
             {
@@ -82,29 +104,28 @@
                   "autoHideTimeout": 3,
                   "animated": true,
                   "autoHide": true,
-                  // Pastikan semua komponen kontrol diaktifkan jika Fluid Player mendukungnya
                   "fullscreen": true,
                   "playPause": true,
                   "progress": true,
-                  "volume": true, // Pastikan ini true
+                  "volume": true,
                   "playbackRates": true,
                   "theatreMode": true,
-                  "download": false // Ini sesuai preferensi Anda
+                  "download": false
                 },
                 "htmlOnPauseBlock": {
                   "html": null,
                   "height": null,
                   "width": null
                 },
-                "autoPlay": true, // Mengatur autoplay agar langsung memutar video
-                "mute": false, // Pastikan ini false agar volume tidak ter-mute secara default
+                "autoPlay": false, // <-- Ubah ini menjadi false agar video tidak langsung putar
+                "mute": false,
                 "allowTheatre": true,
                 "playPauseAnimation": true,
                 "playbackRateEnabled": true,
                 "allowDownload": false,
                 "playButtonShowing": true,
-                "fillToContainer": true, // Memastikan video mengisi kontainer
-                "posterImage": ""
+                "fillToContainer": true,
+                "posterImage": foundVideo.PosterUrl || "" // Menggunakan poster dari JSON atau kosong
               },
               "vastOptions": {
                 "adList": [],
@@ -116,11 +137,11 @@
           console.log(`Memuat video: ${foundVideo.Judul} - ${foundVideo.Url}`);
         } else {
           console.error(`Video dengan ID ${videoId} tidak ditemukan dalam data JSON.`);
-          videoPlayer.src = ''; // Kosongkan src jika video tidak ditemukan
+          videoPlayer.src = '';
         }
       } catch (error) {
         console.error('Terjadi kesalahan saat mengambil data JSON:', error);
-        videoPlayer.src = ''; // Kosongkan src jika terjadi error fetch
+        videoPlayer.src = '';
       }
     });
   </script>
