--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="monetag" content="82d151422eebfd582a09baed1158ba5f">
   <title>Professional Video Player</title>
   <script type="text/javascript">
       (function (l) {
