--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!--Iklan Vignate Banner-->
 
   <!--Iklan Interstitial-->
-  
+  <script>(function(d,z,s){s.src='https://'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('wugroansaghadry.com',9617834,document.createElement('script'))</script>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <script src="https://cdn.fluidplayer.com/v3/current/fluidplayer.min.js"></script>
