--- a/index.html
+++ b/index.html
@@ -65,6 +65,57 @@
     <video id="video-player" controls preload="auto"></video>
   </div>
 
+  <!-- Overlay wajib matikan AdBlock/DNS -->
+<div id="adblock-overlay" style="
+  display:none;
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background:rgba(0,0,0,0.9);
+  color:white;
+  z-index:9999;
+  text-align:center;
+  font-size:18px;
+  padding-top:20%;
+">
+  <p><b>Matikan DNS AdBlock / Pemblokir Iklan</b></p>
+  <p>Nonaktifkan pemblokir iklan untuk melanjutkan menonton video ini.</p>
+</div>
+
+<script>
+document.addEventListener("DOMContentLoaded", function() {
+  // 1. Buat elemen "umpan" yang biasanya diblokir AdBlock
+  var bait = document.createElement('div');
+  bait.className = 'adsbox'; // Nama class yang sering diblokir
+  bait.style.height = '1px';
+  bait.style.width = '1px';
+  bait.style.position = 'absolute';
+  bait.style.left = '-9999px';
+  document.body.appendChild(bait);
+
+  // 2. Tunggu sebentar lalu cek apakah elemen hilang (diblokir)
+  setTimeout(function() {
+    var baitBlocked = false;
+
+    if (!bait || bait.offsetParent === null || bait.offsetHeight === 0 || bait.offsetWidth === 0) {
+      baitBlocked = true;
+    }
+
+    // 3. Jika terdeteksi adblock aktif, tampilkan overlay
+    if (baitBlocked) {
+      document.getElementById('adblock-overlay').style.display = 'block';
+      var video = document.getElementById('video-player');
+      if(video) {
+        video.pause();
+        video.controls = false;
+      }
+    }
+  }, 1000);
+});
+</script>
+  
   <script>
     document.addEventListener('DOMContentLoaded', async () => {
       let urlPath = window.location.pathname;
