--- a/index.html
+++ b/index.html
@@ -59,62 +59,32 @@
       object-fit: contain; /* atau cover, tergantung preferensi Anda */
     }
   </style>
+
+  <style>
+#adblock-overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.9);
+  color: white;
+  z-index: 99999;
+  text-align: center;
+  font-size: 20px;
+  font-family: sans-serif;
+  padding-top: 20%;
+}
+</style>
+  
 </head>
 <body class="bg-black m-0 p-0 font-sans">
   <div id="video-container">
     <video id="video-player" controls preload="auto"></video>
   </div>
 
-  <!-- Overlay wajib matikan AdBlock/DNS -->
-<div id="adblock-overlay" style="
-  display:none;
-  position:fixed;
-  top:0;
-  left:0;
-  width:100%;
-  height:100%;
-  background:rgba(0,0,0,0.9);
-  color:white;
-  z-index:9999;
-  text-align:center;
-  font-size:18px;
-  padding-top:20%;
-">
-  <p><b>Matikan DNS AdBlock / Pemblokir Iklan</b></p>
-  <p>Nonaktifkan pemblokir iklan untuk melanjutkan menonton video ini.</p>
-</div>
 
-<script>
-document.addEventListener("DOMContentLoaded", function() {
-  // 1. Buat elemen "umpan" yang biasanya diblokir AdBlock
-  var bait = document.createElement('div');
-  bait.className = 'adsbox'; // Nama class yang sering diblokir
-  bait.style.height = '1px';
-  bait.style.width = '1px';
-  bait.style.position = 'absolute';
-  bait.style.left = '-9999px';
-  document.body.appendChild(bait);
-
-  // 2. Tunggu sebentar lalu cek apakah elemen hilang (diblokir)
-  setTimeout(function() {
-    var baitBlocked = false;
-
-    if (!bait || bait.offsetParent === null || bait.offsetHeight === 0 || bait.offsetWidth === 0) {
-      baitBlocked = true;
-    }
-
-    // 3. Jika terdeteksi adblock aktif, tampilkan overlay
-    if (baitBlocked) {
-      document.getElementById('adblock-overlay').style.display = 'block';
-      var video = document.getElementById('video-player');
-      if(video) {
-        video.pause();
-        video.controls = false;
-      }
-    }
-  }, 1000);
-});
-</script>
   
   <script>
     document.addEventListener('DOMContentLoaded', async () => {
@@ -206,5 +176,45 @@ document.addEventListener("DOMContentLoaded", function() {
       }
     });
   </script>
+
+  <div id="adblock-overlay">
+  <p><b>Matikan DNS / AdBlock untuk melanjutkan</b></p>
+  <p>Nonaktifkan pemblokir iklan, lalu reload halaman ini.</p>
+</div>
+
+
+  <script>
+document.addEventListener("DOMContentLoaded", function() {
+  // Buat elemen bait yang sering diblokir
+  var bait = document.createElement('div');
+  bait.className = 'adsbox'; // Nama class yang umum diblokir
+  bait.style.height = '1px';
+  bait.style.width = '1px';
+  bait.style.position = 'absolute';
+  bait.style.left = '-9999px';
+  document.body.appendChild(bait);
+
+  // Cek setelah DOM selesai benar-benar dirender
+  setTimeout(function() {
+    var blocked = false;
+
+    if (!bait || bait.offsetParent === null || bait.offsetHeight === 0 || bait.offsetWidth === 0) {
+      blocked = true;
+    }
+
+    if (blocked) {
+      // Tampilkan overlay
+      document.getElementById('adblock-overlay').style.display = 'block';
+      // Pause video & matikan kontrol
+      var video = document.getElementById('video-player');
+      if(video) {
+        video.pause();
+        video.controls = false;
+      }
+    }
+  }, 1500); // jeda 1,5 detik agar elemen ter-render
+});
+</script>
+  
 </body>
 </html>
