--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="monetag" content="82d151422eebfd582a09baed1158ba5f">
+  <meta name="clckd" content="7c43c71e1a4aea72a1873e1ed9ec06c8" />
   <title>DoodStream Pro</title>
   <script type="text/javascript">
       (function (l) {
