--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="monetag" content="82d151422eebfd582a09baed1158ba5f">
   <meta name="clckd" content="7c43c71e1a4aea72a1873e1ed9ec06c8" />
+  <meta name="monetag" content="b28faee7f23af8e3d18f0d673450f8ec">
   
   <meta name="9e2d6158455377bb70b3bac9e99cc235fbffe8ec" content="9e2d6158455377bb70b3bac9e99cc235fbffe8ec" />
   <meta name="referrer" content="no-referrer-when-downgrade" />
